# anylist

./: .dockerignore  .gitignore  .prettierrc  .releaserc.json  DOCKER.md  Dockerfile  LICENSE  MIGRATION.md  README.md  celery.py  compose.yaml  docker-compose.yml  dockerfile.celery  dockerfile.qq  dockerfile.www  makefile  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  tsup.config.ts
.devcontainer/: devcontainer.json
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  cross-language-testing.yml  release.yml  security.yml
anylist/: _version.py
anylist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
conf/: settings.py
db/: env.py
docker/www/: prestart.sh
lib/: index.js  ingredient.js  item.js  list.js  meal-planning-calendar-event.js  meal-planning-calendar-label.js  recipe-collection.js  recipe.js  types.d.ts  types.ts
services/: jinja.py
src/: index.d.ts  index.ts  ingredient.d.ts  ingredient.ts  item.d.ts  item.ts  list.d.ts  list.ts  meal-planning-calendar-event.d.ts  meal-planning-calendar-event.ts  meal-planning-calendar-label.d.ts  meal-planning-calendar-label.ts  recipe-collection.d.ts  recipe-collection.ts  recipe.d.ts  recipe.ts  types.ts  uuid.ts
src/anylist/: __init__.py  anylist.py  item.py  list.py  meal_planning_calendar_event.py  meal_planning_calendar_label.py  recipe.py  recipe_collection.py
test/: anylist.test.js  ingredient.test.js  item.test.js  list.test.js  uuid.test.js
tests/: README.md  conftest.py  integration.test.js  item.test.js  package-lock.json  package.json  uuid.test.js
tests/javascript/: test-specs.js
tests/python/: requirements.txt  test_specs.py
tests/python/anylist_python/: __init__.py
tests/shared/: API_TEST_SPECIFICATIONS.md
